file names makes more sense

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3>How to setupp VM Server</h3>
         </div>
         <div>
-            <video controls src="./Files/Screencast from 19. sep. 2023 kl. 11.19 +0200.webm" alt="(Video) VM Settup tutorial "></video>
+            <video controls src="./Files/VmSetup.webm" alt="(Video) VM Settup tutorial "></video>
         </div>
         <div>
             <p>
